--- a/options.conf
+++ b/options.conf
@@ -4,6 +4,7 @@ url = https://files.pythonhosted.org/packages/fc/43/f19cf3a0206d3f345640e6155f59
 archives = 
 giturl = 
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
